# kan

./: .gitignore  EA KAN.ipynb  README.md  hellokan.ipynb  logs.py  pyproject.toml  requirements.txt  runs_parall.py  save.py  Чтение.ipynb  выборки.ipynb
